fix: lower breakpoint max value precision to avoid rounding #11313
As seen in #10978, we need a subpixel precision to handle zoomed browsers. But browsers handle sub-pixel mediaqueries badly and a too high precision causes the issue described above. So we have to find the proper balance for a maximum support.

Changes:
* set breakpoint max values to `0.00125em` (`0.02px`)  under the next breakpoint instead of `0.00001`.

Closes https://github.com/zurb/foundation-sites/issues/11313

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -105,7 +105,7 @@ $global-text-direction: ltr !default;
 
 /// Enables flexbox for components that support it.
 /// @type Boolean
-$global-flexbox: true !default;
+$global-flexbox: false !default;
 
 /// Enabled responsive breakpoints for prototypes if applicable
 /// @type Boolean
